; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_core_fetch.c_ossl_method_construct.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_core_fetch.c_ossl_method_construct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (i32*)*, i8* (i32*, i32*, i8*)*, i32* (i32*)* }
%struct.construct_data_st = type { i32, i32, i32*, i8*, %struct.TYPE_3__*, i32* }

@ossl_method_construct_this = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @ossl_method_construct(i32* %0, i32 %1, i32 %2, %struct.TYPE_3__* %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca %struct.construct_data_st, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store %struct.TYPE_3__* %3, %struct.TYPE_3__** %9, align 8
  store i8* %4, i8** %10, align 8
  store i8* null, i8** %11, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i8* (i32*, i32*, i8*)*, i8* (i32*, i32*, i8*)** %14, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = load i8*, i8** %10, align 8
  %18 = call i8* %15(i32* %16, i32* null, i8* %17)
  store i8* %18, i8** %11, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %20, label %58

20:                                               ; preds = %5
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 2
  %23 = load i32* (i32*)*, i32* (i32*)** %22, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = call i32* %23(i32* %24)
  %26 = getelementptr inbounds %struct.construct_data_st, %struct.construct_data_st* %12, i32 0, i32 2
  store i32* %25, i32** %26, align 8
  %27 = icmp eq i32* %25, null
  br i1 %27, label %28, label %29

28:                                               ; preds = %20
  br label %59

29:                                               ; preds = %20
  %30 = load i32*, i32** %6, align 8
  %31 = getelementptr inbounds %struct.construct_data_st, %struct.construct_data_st* %12, i32 0, i32 5
  store i32* %30, i32** %31, align 8
  %32 = load i32, i32* %7, align 4
  %33 = getelementptr inbounds %struct.construct_data_st, %struct.construct_data_st* %12, i32 0, i32 0
  store i32 %32, i32* %33, align 8
  %34 = load i32, i32* %8, align 4
  %35 = getelementptr inbounds %struct.construct_data_st, %struct.construct_data_st* %12, i32 0, i32 1
  store i32 %34, i32* %35, align 4
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %37 = getelementptr inbounds %struct.construct_data_st, %struct.construct_data_st* %12, i32 0, i32 4
  store %struct.TYPE_3__* %36, %struct.TYPE_3__** %37, align 8
  %38 = load i8*, i8** %10, align 8
  %39 = getelementptr inbounds %struct.construct_data_st, %struct.construct_data_st* %12, i32 0, i32 3
  store i8* %38, i8** %39, align 8
  %40 = load i32*, i32** %6, align 8
  %41 = load i32, i32* %7, align 4
  %42 = load i32, i32* @ossl_method_construct_this, align 4
  %43 = call i32 @ossl_algorithm_do_all(i32* %40, i32 %41, i32* null, i32 %42, %struct.construct_data_st* %12)
  %44 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %45 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %44, i32 0, i32 1
  %46 = load i8* (i32*, i32*, i8*)*, i8* (i32*, i32*, i8*)** %45, align 8
  %47 = load i32*, i32** %6, align 8
  %48 = getelementptr inbounds %struct.construct_data_st, %struct.construct_data_st* %12, i32 0, i32 2
  %49 = load i32*, i32** %48, align 8
  %50 = load i8*, i8** %10, align 8
  %51 = call i8* %46(i32* %47, i32* %49, i8* %50)
  store i8* %51, i8** %11, align 8
  %52 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 0
  %54 = load i32 (i32*)*, i32 (i32*)** %53, align 8
  %55 = getelementptr inbounds %struct.construct_data_st, %struct.construct_data_st* %12, i32 0, i32 2
  %56 = load i32*, i32** %55, align 8
  %57 = call i32 %54(i32* %56)
  br label %58

58:                                               ; preds = %29, %5
  br label %59

59:                                               ; preds = %58, %28
  %60 = load i8*, i8** %11, align 8
  ret i8* %60
}

declare dso_local i32 @ossl_algorithm_do_all(i32*, i32, i32*, i32, %struct.construct_data_st*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
